<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="upload_images"
		android:title="@string/pref_sync_images"/>

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="upload_videos"
		android:title="@string/pref_sync_video"/>

	<CheckBoxPreference
		android:defaultValue="true"
		android:key="wifi_only"
		android:title="@string/pref_wifi_only"/>

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="compress_images"
		android:title="@string/pref_compress"
		android:summary="@string/pref_compress_summary"/>

	<CheckBoxPreference
		android:defaultValue="false"
		android:key="upload_on_battery_only"
		android:title="@string/pref_battery"
		android:summary="@string/wait_until_not_using_battery"/>

</PreferenceScreen>
