<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:padding="16dp">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:gravity="center"
		android:text="@string/your_webdav_server"
		android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:orientation="vertical">

		<android.support.design.widget.TextInputLayout
			android:id="@+id/url_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/url"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textUri"
				android:hint="@string/server_url"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/username_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/username"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:hint="@string/username"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/password_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:hint="@string/password"/>

		</android.support.design.widget.TextInputLayout>

	</LinearLayout>

	<Button
		android:id="@+id/save"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:text="@string/save"
		android:theme="@style/PrimaryButton"/>

</LinearLayout>
